syntax = "proto3";

option go_package = "github.com/Richie78321/groupchat/chatservice";

package chatservice;

message TestRequest {}
message TestResponse {}

service ChatService {
    rpc TestStream(TestRequest) returns (stream TestResponse) {}
}